added some basic information onto the index page and basic styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dan Miller's Portfolio</title>
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Roboto?selection.family=Roboto">
 </head>
 
 <body class="page-container">
+    <header class="header-bar">
+        <h1 id="header-title">Web Dev by Dan Miller</h1>
 
+
+
+    </header>
+
+    <div id="about-section">
+        <img class="profile-photo" src="src/dan-self-short.jpg" />
+        <p class="about-me">
+        Web developer, photographer and dungeon master.
+        </p>
+    </div>
+
+    <div id="project-section">
+        <div class="project-block">
+            <h2 class="project-title">OC Connect Mobile</h2>
+            <p class="project-info">
+            Get connected to a consolidated community listing of 700+ services and resources offered by government and/or non-profit organizations in the NC Triangle
+            </p>
+            <img class="project-photo occonect" src="src/occonnect.png" />
+        </div>
+
+        <div class="project-block">
+            <h2 class="project-title">Dino Cards</h2>
+            <p class="project-info">
+            Dino Cards helps people study different aspects of dinosaurs through the use of flash cards and quizzes.
+            </p>
+            <img class="project-photo" src="src/cartoon-dino.png" />
+        </div>
+
+        <div class="project-block">
+            <h2 class="project-title">Pathfinder</h2>
+            <p class="project-info">
+            Pathfinder takes a text file and converts it into a map, and then finds the fastest route from left to right.
+            </p>
+            <img class="project-photo" src="src/myOtherRoute.png" />
+        </div>
+    </div>
 
 
 </body>
