added some images and links to social sites

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dan Miller's Portfolio</title>
     <link href="styles/styles.css" rel="stylesheet">
-    <link href="https://fonts.google.com/specimen/Roboto?selection.family=Roboto">
+    <link href="https://fonts.google.com/specimen/Roboto?selection.family=Roboto" rel="stylesheet">
 </head>
 
 <body class="page-container">
     <header class="header-bar">
         <h1 id="header-title">Web Dev by Dan Miller</h1>
-
-
 
     </header>
 
@@ -50,6 +48,12 @@
             <img class="project-photo" src="src/myOtherRoute.png" />
         </div>
     </div>
+
+    <footer id="footer-section">
+        <a href="https://www.linkedin.com/in/dan-miller-5138b421/" target=blank><img class="link-icon" src="src/linkedin.png"/></a>
+        <a href="https://github.com/dmm4613" target=blank><img class="link-icon" src="src/github.png"/></a>
+        <a href="mailto:dmm4613@gmail.com"><img class="link-icon" src="src/gmail.png"/></a>
+    </footer>
 
 
 </body>
